# Stock-Market-Sentiment-Analysis-System

./: .gitignore  README.md  docker-compose.yml  fetch_stock_price.py  join_data.py  pipeline.drawio  pyproject.toml  test_file.txt  未命名绘图.drawio
crawler/: config.py  finmind_news.py  finmind_news_test.py  get_0050_stocks.py  mysql_connection.py  news_repository.py
data/: news_sentiment_processed.csv  sentiment_stock_merged.csv
example/: ckipbert_sent_dict_test_1.py  jieba_sent_dict_test_1.py  jieba_test.py
source/: 0050.csv  0050_list.csv  2330_price.csv
